# simple-networks-with-amazon-vpc-lattice

./: .flake8  .gitignore  .isort.cfg  .pylintrc  .style  .style.yapf  LICENSE  Pipfile  README.md  app.py  cdk.context.json  cdk.json  deploy.sh  destroy.sh  lint.sh  pyproject.toml  renovate.json
.github/: dependabot.yml
cdk/: pyproject.toml  setup.py
cdk/simple_networks_with_amazon_vpc_lattice/: constants.py  simple_networks_with_amazon_vpc_lattice_stack.py
cdk/simple_networks_with_amazon_vpc_lattice/ec2/: ec2_construct.py
cdk/simple_networks_with_amazon_vpc_lattice_cdk/: app.py  simple_networks_with_amazon_vpc_lattice_stack.py
cdk/simple_networks_with_amazon_vpc_lattice_cdk/ec2/: ec2_construct.py  user_data.sh
cdk/simple_networks_with_amazon_vpc_lattice_cdk/ecs/: ecs_construct.py
cdk/simple_networks_with_amazon_vpc_lattice_cdk/lambda_function/: lambda_construct.py
cdk/simple_networks_with_amazon_vpc_lattice_cdk/lattice/: lattice_construct.py
lambda_handlers/: lambda_function.py
