[tool.poetry]
name = "simple-networks-with-amazon-vpc-lattice"
version = "0.1.0"
description = "CDK code showing possibilities of Amazon VPC Lattice service"
authors = ["amswiatkowski <adam.swiatkowski@iodi.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# 3rdparties
boto3 = "^1.28.62"
botocore = "^1.37.18"


[tool.poetry.group.dev.dependencies]
# Internal
simple-networks-with-amazon-vpc-lattice-cdk = {path = "cdk", develop = true}

# 3rdparties
pytest = "*"
pytest-mock = "*"
pycodestyle = "*"
python-dotenv = "*"
GitPython = "*"
yapf = "*"
pylint = "*"
isort = "*"
"aws-cdk.aws-lambda-python-alpha" = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
